Mac OS Plugin 3.0
- All native calls now use the Cocoa API. (Java 1.4.1 is required)
- Old MRJ methods replaced with com.apple.eawt.
- Added a Dock Menu. Dock Menu provides similar functionality to the plugin menu.
- Added services menu (bundle needs to be updated)
- Opening a directory by drag and drop or with open -a will
  set the file browser to the directory.

Mac OS Plugin 2.0.4

- Now respects the retore from commandline option when opening files
  in the Finder.
- Fixed NPE when opening files from the Finder before jEdit is running.

Mac OS Plugin 2.0.3

- jEdit now works properly when used in background mode. Views can be
  created by opening a file from the Finder.

Mac OS Plugin 2.0.2

- Removed the "Run AppleScript" menu in favour of the "Macros" menu.
- Added an option to use the default system highlight colour in the
  text area.

Mac OS Plugin 2.0.1

- Fixed a bug: scripts directory was not created.

Mac OS Plugin 2.0

- Added MacOS menu to the Plugins menu. Provides time saving features
  like revealing files and folders in the Finder, and running
  AppleScripts.
- You can run AppleScripts (compiled, uncompiled and standalone).
  Scripts must be located in the scripts folder in the jEdit folder.
  They can be either plain text or compiled scripts. Scripts must have
  their type and creator set correctly, have a .scpt (for compiled
  scripts) or .applescript (for uncompiled scripts) extension, or
  both. Note: Scripts that require user interaction are not supported.
- Added and option to Mac OS Plugin settings to change the script
  folder search depth.